<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MatchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/match_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/match_title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_H1"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/match_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/match_text"
            app:layout_constraintTop_toBottomOf="@+id/match_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/match_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/match"
            app:layout_constraintTop_toBottomOf="@id/match_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/match_button_skip"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/match_button_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/match_image"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/match_button_next"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/match_button_skip"
            app:layout_constraintTop_toTopOf="@id/match_button_skip" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>