<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_100">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ac_arrow_back"
            app:title="@string/register_title"
            app:titleTextColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/register_avatar_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:srcCompat="@drawable/img_registro" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/register_avatar_img_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/register_avatar_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_add_a_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name_layout"
            style="@style/registry_text_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_avatar_img">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lastname_layout"
            style="@style/registry_text_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_lastname" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_age_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            app:boxBackgroundColor="@color/grey_100"
            app:layout_constraintTop_toBottomOf="@id/register_lastname_layout">

            <AutoCompleteTextView
                android:id="@+id/register_input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/your_age"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_join_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/yellow_700"
            android:enabled="false"
            android:text="@string/join"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/register_privacy_policy_text"
            app:layout_constraintTop_toBottomOf="@+id/register_age_layout"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_privacy_policy_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="end"
            android:text="@string/privacy_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_view_conditions_button"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_view_conditions_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            android:text="@string/view_conditions"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/register_privacy_policy_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_privacy_policy_text"
            app:layout_constraintTop_toTopOf="@id/register_privacy_policy_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>