<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/home_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/upcoming_meetups"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_H1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/home_title_textview">

                    <com.google.android.material.card.MaterialCardView
                        style="@style/home_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/img_calendario" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/card_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_calendar_text" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/card_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_calendar_title" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/home_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/img_camping" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/card_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_camping_text" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/card_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_camping_title" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>