<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:src="@drawable/nomads_city_tour"
            app:layout_constraintBottom_toTopOf="@id/login_title"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_user_layout"
            app:layout_constraintTop_toBottomOf="@id/login_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/login"
            app:layout_constraintBottom_toTopOf="@id/login_password_layout"
            app:layout_constraintTop_toBottomOf="@id/login_title">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/password"
            app:endIconDrawable="@drawable/ic_lock"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_user_layout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/black"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toTopOf="@id/login_forgot_password_text"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toTopOf="@id/login_new_account_text"
            app:layout_constraintEnd_toStartOf="@id/login_forgot_password_button"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_new"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/login_forgot_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_forgot_password_text"
            app:layout_constraintTop_toTopOf="@id/login_forgot_password_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_new_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/do_you_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_new_account_button"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_forgot_password_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_new_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/login_new_account_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_new_account_text"
            app:layout_constraintTop_toTopOf="@id/login_new_account_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>